@@ -1,0 +1,40 @@
+<?xml version= "1.0"?>
+
+<expectedFails version="1.1">
+
+  <!-- Notes about the format of this file:
+
+       The required elements for a given failure are just:
+
+         <test name="...">
+           <phase name="...">
+             <status>...</status>
+           </phase>
+         </test>
+
+       There can be multiple phase blocks in a given test block.
+
+       In addition, a number of optional elements are allowed, which
+       currently are just for human consumption (not parsed by any
+       scripts):
+
+       - A phase block can contain an "issue" element, which gives the
+       issue number associated with this failure. (#123 refers to issue
+       #123 in the ESCOMP/ctsm repository. Issues in other repositories
+       should be specified as ORG/repo#123 - e.g., ESMCI/cime#123.)
+
+       - A phase block can contain a "comment" element, which gives any
+       sort of comment you desire.
+  -->
+
+
+  <!-- prealpha_noresm test suite failures -->
+
+  <test name="SMS_D_Ld1_P253.ne30pg3_tn05.N1850.betzy_intel.allactive-defaultio">
+    <phase name="RUN">
+      <status>FAIL</status>
+      <issue>NorESM#688</issue>
+    </phase>
+  </test>
+
+</expectedFails>
